<resources>
    <string name="app_name">My Application</string>
    <string name="nishan_e_khyber">NISHAN-E-KHYBER</string>
    <string name="educating_a_new_generation">Educating A New Generation</string>
    <string name="todo">TODO</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_there_welcome_back">Hello there,Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="image1">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_otp_method">Select OTP Method</string>
    <string name="welcome_to_attendance_sheet">welcome To Attendance Sheet</string>
    <string name="title_activity_admin">adminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="imageView">FG_image</string>
    <string name="email_gmail_com">Email@gmail.com</string>
</resources>