<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo_fg"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:transitionName="image_logo"
        android:layout_marginBottom="20dp"
        android:src="@drawable/college_logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/image1" />

    <TextView
        android:id="@+id/text_wlcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#1B2022"
        android:textSize="30sp"
        android:textStyle="bold"
        android:transitionName="text_logo" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:transitionName="tv"
        android:text="@string/sign_in_to_continue"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/User_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:transitionName="user"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:transitionName="pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#757575" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Forget_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:transitionName="forget"
            android:textColor="@color/black"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:transitionName="log"
            android:text="@string/go"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/new_user_sign_up"
            android:transitionName="sign"
            android:textSize="18sp"
            android:background="#00000000"
            android:textColor="@color/black"/>

    </LinearLayout>


</LinearLayout>

