<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo_fg"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image1"
            android:src="@drawable/college_logo"
            android:transitionName="image_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="WELCOME"
            android:textColor="#3B4042"
            android:textSize="39sp"
            android:textStyle="bold"
            android:transitionName="text_logo" />

        <TextView
            android:id="@+id/sign_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="SignUp to Start your New Journey"
            android:textSize="20sp"
            android:transitionName="tv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full_Name"
                android:transitionName="nam">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/User_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:transitionName="user"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email Address"
                android:transitionName="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rggroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/Student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:fontFamily="sans-serif-black"
                    android:text="Student" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-black"
                    android:text="Parents" />


            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countyCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:ccp_defaultPhoneCode="92"
                    />

                <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:transitionName="phone"
                app:counterEnabled="true"
                app:counterMaxLength="11">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ccpnum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:transitionName="pass"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="#757575" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/go"
                android:textSize="25sp"
                android:transitionName="go" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#00000000"
                android:minHeight="48dp"
                android:text="Already have an account? Login"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:transitionName="log" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>